app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap');

body {
  background-image: radial-gradient(
  circle at center -10%,
  hsl(31, 100%, 59%) 5%,
  hsl(346, 69%, 51%) 55%,
  hsl(240deg 100% 20%) 100%
  );
  min-height: 100vh;
}

.main-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  z-index: -1;
}

/*Navbar*/
nav.navbar{
  color: white;
  background-color: rgb(20, 20, 20, 1);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
  -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
  box-shadow:0px 0px 26px 0px #1b1b1b ;
  height: 50px;

}

.nav-link {
  padding: 5px 10px;
  margin: 10px 10px;
}

.nav-link:hover{
  background-color: rgb(206, 30, 65);
  border-radius: 0.5rem;
}

.pixie{
  display: flex;
  font-size: xx-large;
  padding: 10px;
  margin-left: 20px;
}

.navbar-links{
  padding: 13px;
}
/*Login*/

.login{
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  user-select: none;
  min-height: 90vh;
}

@media (width <= 720px) {
  .login {
    flex-direction: column;
  }

  .login form{
    border-radius: 5vw;
  }
}

.login-left{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 5vw 5vw;
}

.login .pixie{
  color: white;
  font-size: 10rem;
  flex-grow: 1;
}

.login .intro{
  color: white;
  text-align: start;
}


.login form{
  color: rgb(240, 240, 240);
  display: flex;
  flex-direction: column;
  background-color: rgb(32, 32, 32, 0.5);
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  justify-content: center;
  align-items: center;
  -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
  -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
  box-shadow:0px 0px 26px 0px #1b1b1b ;

  padding: 30px 50px;
  /*padding-top: calc((100vh - 90vh) / 2);
  padding-bottom: calc((100vh - 90vh) / 2);*/
  margin-right: 5vw;
  min-height: calc(100vh - 50px);
}

form h1{
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  text-align: center;
  padding-bottom: 1rem;
  font-size: x-large;
  padding-top: 0px;
  color: white;

}

form h2{
  text-align: center;
  padding-bottom: 1rem;
  font-size: medium;
  padding-bottom: 20px;
}

.login label{
  color: rgb(240, 240, 240);
  display: flex;
  font-weight: 300;
  font-size: 0.8rem;
  padding-left: 0.4em;
  padding-bottom: 0.4em;
}

.login input{
  color: rgb(255, 255, 255);
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: smaller;
  background-color: rgba(255, 255, 255, 0.1);
  margin-bottom: 1rem;
  border: solid white 2px;
  border-radius: 0.5rem;
  padding: 0.3rem 0.5rem;
  max-width: 400px;
  width: 250px;
  font-weight: 400;
}

.form-links{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.form-link{
  font-size: small;
}

.form-link:hover{
  cursor: pointer;
  color: rgb(255, 114, 114);
}

.login-btn{
  background-color: rgb(230, 230, 230);
  color: black;
  margin-top: 1rem;
  border-radius: 0.5rem;
  padding: 0.3rem 1rem;
}

/*DIARY*/

.diary-home{
  background-color: grey;
  height: 100vh;
}

/*scroll bars*/
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f100;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #88888800;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #55555500;
}

/*pixie diary*/

.pixie-diary{
  font-size: 120px;
  background: linear-gradient(
    to bottom,
    hsl(31, 100%, 59%) 0%,
    hsl(346, 69%, 51%) 50%,
    hsl(240, 100%, 20%) 100%
  );
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

